[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/bebas_neue/BebasNeue-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/MainMenu/Options.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/bebas_neue.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="MarginContainer" parent="."]
visible = false
anchor_left = -0.000621414
anchor_top = -0.00110462
anchor_right = 0.999379
anchor_bottom = 0.998895
custom_constants/margin_right = 100
custom_constants/margin_top = 50
custom_constants/margin_left = 100
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
margin_left = 100.0
margin_top = 50.0
margin_right = 1820.0
margin_bottom = 1029.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainMenu/VBoxContainer"]
margin_right = 1720.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Monty Hall 3d"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/VBoxContainer"]
margin_top = 80.0
margin_right = 1720.0
margin_bottom = 122.0
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="StartButton" type="Button" parent="MainMenu/VBoxContainer/MarginContainer"]
margin_left = 100.0
margin_right = 1620.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="MarginContainer2" type="MarginContainer" parent="MainMenu/VBoxContainer"]
margin_top = 142.0
margin_right = 1720.0
margin_bottom = 184.0
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="OptionsButton" type="Button" parent="MainMenu/VBoxContainer/MarginContainer2"]
margin_left = 100.0
margin_right = 1620.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="MarginContainer3" type="MarginContainer" parent="MainMenu/VBoxContainer"]
margin_top = 204.0
margin_right = 1720.0
margin_bottom = 246.0
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="ExitButton" type="Button" parent="MainMenu/VBoxContainer/MarginContainer3"]
margin_left = 100.0
margin_right = 1620.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "quit"

[node name="Options" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="Options"]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Label" parent="Options/Options"]
margin_right = 1920.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Options/Options"]
margin_top = 116.0
margin_right = 1920.0
margin_bottom = 158.0
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 0

[node name="BackToMainMenu" type="Button" parent="Options/Options/MarginContainer"]
margin_left = 100.0
margin_right = 1820.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "Back to Main Menu"

[node name="MarginContainer2" type="MarginContainer" parent="Options/Options"]
margin_top = 178.0
margin_right = 1920.0
margin_bottom = 214.0
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Options/Options/MarginContainer2"]
margin_left = 100.0
margin_right = 1820.0
margin_bottom = 36.0
alignment = 1

[node name="Label" type="Label" parent="Options/Options/MarginContainer2/HBoxContainer"]
margin_right = 200.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Door Opening Speed:"

[node name="SpeedDisplay" type="Label" parent="Options/Options/MarginContainer2/HBoxContainer"]
margin_left = 204.0
margin_right = 234.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "1.0"

[node name="SpeedSlider" type="HSlider" parent="Options/Options/MarginContainer2/HBoxContainer"]
margin_left = 238.0
margin_right = 1720.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.2
max_value = 3.0
step = 0.1
value = 1.0

[node name="MarginContainer3" type="MarginContainer" parent="Options/Options"]
margin_top = 234.0
margin_right = 1920.0
margin_bottom = 274.0
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="Options/Options/MarginContainer3"]
margin_left = 100.0
margin_right = 1820.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Options/Options/MarginContainer3/HBoxContainer2"]
margin_top = 2.0
margin_right = 64.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 4 )
text = "Vsync:"

[node name="VsyncCheckBox" type="CheckButton" parent="Options/Options/MarginContainer3/HBoxContainer2"]
margin_left = 68.0
margin_right = 144.0
margin_bottom = 40.0

[node name="MarginContainer4" type="MarginContainer" parent="Options/Options"]
margin_top = 294.0
margin_right = 1920.0
margin_bottom = 338.0
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="Options/Options/MarginContainer4"]
margin_left = 100.0
margin_right = 1820.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="Options/Options/MarginContainer4/HBoxContainer2"]
margin_top = 4.0
margin_right = 117.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
text = "Fullscreen:"

[node name="Fullscreen" type="CheckButton" parent="Options/Options/MarginContainer4/HBoxContainer2"]
margin_left = 121.0
margin_right = 197.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 4 )

[node name="MarginContainer5" type="MarginContainer" parent="Options/Options"]
margin_top = 358.0
margin_right = 1920.0
margin_bottom = 400.0
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_left = 100
custom_constants/margin_bottom = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="Options/Options/MarginContainer5"]
margin_left = 100.0
margin_right = 1820.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="Options/Options/MarginContainer5/HBoxContainer2"]
margin_top = 3.0
margin_right = 163.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
text = "Max framerate: "

[node name="MaxFramerate" type="OptionButton" parent="Options/Options/MarginContainer5/HBoxContainer2"]
margin_left = 167.0
margin_right = 220.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 4 )
text = "60"
items = [ "30", null, false, 30, null, "60", null, false, 60, null, "90", null, false, 90, null, "120", null, false, 120, null, "unlimited", null, false, 0, null ]
selected = 1

[connection signal="button_up" from="MainMenu/VBoxContainer/MarginContainer/StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_up" from="MainMenu/VBoxContainer/MarginContainer2/OptionsButton" to="." method="_on_Options_button_up"]
[connection signal="button_up" from="MainMenu/VBoxContainer/MarginContainer3/ExitButton" to="." method="_on_ExitButton_button_up"]
[connection signal="visibility_changed" from="Options" to="Options" method="_on_Options_visibility_changed"]
[connection signal="button_up" from="Options/Options/MarginContainer/BackToMainMenu" to="." method="_on_BackToMainMenu_button_up"]
[connection signal="value_changed" from="Options/Options/MarginContainer2/HBoxContainer/SpeedSlider" to="Options" method="_on_SpeedSlider_value_changed"]
[connection signal="toggled" from="Options/Options/MarginContainer3/HBoxContainer2/VsyncCheckBox" to="Options" method="_on_VsyncCheckBox_toggled"]
[connection signal="toggled" from="Options/Options/MarginContainer4/HBoxContainer2/Fullscreen" to="Options" method="_on_Fullscreen_toggled"]
[connection signal="item_selected" from="Options/Options/MarginContainer5/HBoxContainer2/MaxFramerate" to="Options" method="_on_MaxFramerate_item_selected"]
